# FastAPI-UI-Auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release_notes.rst  requirements-dev.txt  requirements.txt
.github/workflows/: code-coverage.yml  python-publish.yaml  python-publish.yml
base/: README.md
fastapiauthenticator/: __init__.py  api.py  endpoints.py  enums.py  models.py  service.py  utils.py
fastapiauthenticator/templates/: index.html  session.html  unauthorized.html
pyapiauthenticator/: __init__.py  api.py
pyapiauthenticator/fastapi/: service.py  utils.py
pyapiauthenticator/templates/: index.html
samples/: sample1.py  sample2.py
tests/: conftest.py  endpoints_test.py  enums_test.py  models_test.py  secure_test.py  service_test.py  utils_test.py
uiauth/: __init__.py  endpoints.py  enums.py  logger.py  models.py  secure.py  service.py  utils.py
uiauth/templates/: index.html  logout.html  session.html  unauthorized.html
verify/: base_api.sh  fast_api.py  index.html  wave.py
