[project]
name = "FastAPI-UI-Auth"
dynamic = ["dependencies", "version"]
description = "Python module to add username and password authentication to specific FastAPI routes"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["fastapiauthenticator", "fastapiauthenticator.templates"]
[tool.setuptools.package-data]
"fastapiauthenticator.templates" = ["*.html"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "fastapiauthenticator.version.version" }

[project.optional-dependencies]
dev = [
    "websockets==15.0.*",
    "pre-commit==4.2.*",
    "uvicorn==0.34.*",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
